# LuaScripting

./: .gitignore  CMakeLists.txt  README.md  function_types_stateless_fix.hpp
LuaGame/: DebugClass.h  GuiCommands.cpp  GuiCommands.hpp  Scene.cpp  Scene.hpp  SceneTypes.h  main.cpp
LuaGame/json/: default_chunk.json  game_chunk.json  level1.json  test_chunk.json  test_chunk1.json  test_chunk12.json  test_chunk123.json
LuaGame/lua/: behavior.lua  bounce_behavior.lua  empty.lua  game_destroy.lua  hello.lua  init.lua  input-not_used.lua  input.lua  iterate_entities.lua  phase1.lua  phase2.lua  phase3.lua  phase4.lua  phasemanager_behavior.lua  player_behavior.lua  prefabs.lua  projectile_behavior.lua  projectile_pool_behavior.lua  registry_simple.lua
LuaGame/lua2/: bounce_behavior.lua  cross_enemy_spawner.lua  game_behavior.lua  init.lua  phase_1.lua  phase_2.lua  phase_load.lua  player_behavior.lua  player_spawner.lua  projectile_behavior.lua  projectile_pool_behavior.lua  projectile_spawner.lua  projectilepool_spawner.lua
SpaceInvaders/: Scene.cpp  Scene.hpp  main.cpp
SpaceInvaders/lua/: behavior.lua  bounce_behavior.lua  init.lua  input.lua  player_behavior.lua  projectile_behavior.lua  projectile_pool_behavior.lua
src/: AudioManager.cpp  AudioManager.hpp  BehaviorScript.cpp  BehaviorScript.hpp  ChunkRegistry.cpp  ChunkRegistry.hpp  CoreComponents.cpp  CoreComponents.hpp  Entity.cpp  Entity.hpp  EventDispatcher.h  FileManager.cpp  FileManager.hpp  GLDebugMessageCallback.cc  Log.cpp  Log.hpp  Observer.h  ParticleBuffer.cpp  ParticleBuffer.hpp  SceneBase.h  SceneGraph.cpp  SceneGraph.hpp  ShapeRenderer.cpp  ShapeRenderer.hpp  SparseSet.hpp  VecTree.h  config.h  hash_combine.h
src/editor/: Command.hpp  CommandQueue.hpp  Context.hpp  DebugClass.h  EditComponentCommand.cpp  EditComponentCommand.hpp  GuiCommands.cpp  GuiCommands.hpp  InspectType.hpp  InspectorState.hpp  SelectionManager.hpp
src/entt-meets-sol2/: bond.hpp  kbhit.hpp  meta_helper.hpp  transform.hpp
src/meta/: MetaClone.cpp  MetaClone.hpp  MetaInspect.cpp  MetaInspect.hpp  MetaSerialize.cpp  MetaSerialize.hpp  meta_aux.h  meta_literals.h  meta_reg.h
src/util/: BatchLoader.cpp  BatchLoader.hpp  SparseSet.hpp  ThreadPool.cpp  ThreadPool.hpp  VecTree.h  VecTree_org.h
src/vec/: AABB.h  mat.h  math_.h  matsys.h  quat.cpp  quat.h  ray.cpp  ray.h  vec.cpp  vec.h
